--- a/archlinuxcn/emacs-llvm-mode-git/lilac.yaml
+++ b/archlinuxcn/emacs-llvm-mode-git/lilac.yaml
@@ -7,6 +7,7 @@ pre_build: vcs_update
 post_build: git_pkgbuild_commit
 update_on:
   - source: vcs
+    lilac_throttle: 14d
   - source: alpm
     from_pattern: ^(\d+\.\d+).*
     to_pattern: \1
