activitywatch: manual rebuild

--- a/archlinuxcn/activitywatch/lilac.yaml
+++ b/archlinuxcn/activitywatch/lilac.yaml
@@ -6,3 +6,5 @@ update_on:
     github: ActivityWatch/activitywatch
     use_latest_release: true
   - alias: python
+  - source: manual
+    manual: 1.0
