fix: remove `npm --user root` (#2629)
* fix: remove `npm --user root`

Since npm 7, the `--user` option is no longer available. `--user root`
not only doesn't fix the permission problem, but also installs the
package called "root", which conflicts with other packages that also
have the `--user root` option.

* joplin: revert PKGBUILD changes as it's following the AUR package

--- a/archlinuxcn/pnpm/PKGBUILD
+++ b/archlinuxcn/pnpm/PKGBUILD
@@ -13,7 +13,7 @@ noextract=("$pkgname-$pkgver.tgz")
 sha256sums=('3ac229d647ae6d0a343ed78de4583e4b6408534adc9f13e1d27a7781b2d4bb34')
 
 package() {
-  npm install -g --user root --prefix "$pkgdir"/usr "$srcdir/$pkgname-$pkgver.tgz"
+  npm install -g --prefix "$pkgdir"/usr "$srcdir/$pkgname-$pkgver.tgz"
 
   find "$pkgdir"/usr -type d -exec chmod 755 {} +
   chown -R root:root "$pkgdir"
