[librewolf] Follow AUR

--- a/archlinuxcn/librewolf/PKGBUILD
+++ b/archlinuxcn/librewolf/PKGBUILD
@@ -5,9 +5,7 @@
 
 pkgname=librewolf
 _pkgname=LibreWolf
-pkgver=96.0.1_1
-_pkgver_real=96.0.1
-_pkgver=96.0.1-1
+pkgver=96.0.1
 pkgrel=1
 pkgdesc="Community-maintained fork of Firefox, focused on privacy, security and freedom."
 arch=(x86_64 aarch64)
@@ -28,21 +26,23 @@ backup=('usr/lib/librewolf/librewolf.cfg'
         'usr/lib/librewolf/distribution/policies.json')
 options=(!emptydirs !makeflags !strip !lto)
 _arch_git=https://raw.githubusercontent.com/archlinux/svntogit-packages/packages/firefox/trunk
-_common_tag="v${_pkgver}"
-_settings_tag='5.1'
+_common_tag="v${pkgver}-${pkgrel}"
+_settings_tag='5.2'
 install='librewolf.install'
 source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkgver.source.tar.xz
         $pkgname.desktop
         "git+https://gitlab.com/${pkgname}-community/browser/common.git#tag=${_common_tag}"
         "git+https://gitlab.com/${pkgname}-community/settings.git#tag=${_settings_tag}"
-        "pref_pane.patch"
+        "mozilla-kde_after_unity.patch"
+        "default192x192.png"
         )
-source_aarch64=("https://raw.githubusercontent.com/archlinuxarm/PKGBUILDs/master/extra/firefox/build-arm-libopus.patch")
-sha256sums=('b4b03214ad838fe2744fed26c497c8a6fa7aedc95f47d4146da1cf5cc97860c0'
+source_aarch64=("${pkgver}-${pkgrel}_build-arm-libopus.patch::https://raw.githubusercontent.com/archlinuxarm/PKGBUILDs/master/extra/firefox/build-arm-libopus.patch")
+sha256sums=('d32d2afa9179a78e6ed97e15e0f39e372c0d662cb9614404db15e7616da31ab8'
             '0b28ba4cc2538b7756cb38945230af52e8c4659b2006262da6f3352345a8bed2'
             'SKIP'
             'SKIP'
-            '982fe27ebcf8326c47ef7ca30436051fc18fa3de93aea06e9821618d33695be6')
+            'fe9dfd79098321faededb85550e3dc78706d60ad80678c3c49de9c1b547095bf'
+            '959c94c68cab8d5a8cff185ddf4dca92e84c18dccc6dc7c8fe11c78549cdc2f1')
 sha256sums_aarch64=('2d4d91f7e35d0860225084e37ec320ca6cae669f6c9c8fe7735cdbd542e3a7c9')
 
 prepare() {
@@ -117,7 +117,7 @@ END
   # ...or maybe not?
   export LDFLAGS+=" -Wl,--no-keep-memory"
   # patch -Np1 -i ${_patches_dir}/arm.patch # not required anymore?
-  patch -Np1 -i ../build-arm-libopus.patch
+  patch -Np1 -i ../${pkgver}-${pkgrel}_build-arm-libopus.patch
 
 else
 
@@ -138,11 +138,17 @@ fi
 
   # Disable (some) megabar functionality
   # Adapted from https://github.com/WesleyBranton/userChrome.css-Customizations
-  patch -Np1 -i ${_patches_dir}/deprecated/megabar.patch
+  patch -Np1 -i ${_patches_dir}/removed-patches/megabar.patch
 
   # Debian patch to enable global menubar
   # disabled for the default build, as it seems to cause issues in some configurations
-  # patch -Np1 -i ${_patches_dir}/unity-menubar.patch
+  # 2022-01-21: re-enabled because it seems to not mess things up anymore nowadays?
+  patch -Np1 -i ${_patches_dir}/unity-menubar.patch
+
+  # KDE menu
+  # patch -Np1 -i ${_patches_dir}/mozilla-kde.patch
+  # custom patch that does not conflict with the unity patch
+  patch -Np1 -i ${srcdir}/mozilla-kde_after_unity.patch
 
   # Disabling Pocket
   patch -Np1 -i ${_patches_dir}/sed-patches/disable-pocket.patch
@@ -186,6 +192,9 @@ fi
   # explain that we force en-US and suggest enabling history near the session restore checkbox.
   patch -Np1 -i ${_patches_dir}/ui-patches/pref-naming.patch
 
+  #
+  patch -Np1 -i ${_patches_dir}/ui-patches/hide-safe-browsing.patch
+
   # remove firefox references in the urlbar, when suggesting opened tabs.
   patch -Np1 -i ${_patches_dir}/ui-patches/remove-branding-urlbar.patch
 
@@ -202,7 +211,7 @@ fi
   patch -Np1 -i ${_patches_dir}/ui-patches/sanitizing-description.patch
 
   # pref pane
-  patch -Np1 -i ${srcdir}/pref_pane.patch
+  patch -Np1 -i ${_patches_dir}/librewolf-pref-pane.patch
 
   rm -f ${srcdir}/common/source_files/mozconfig
   cp -r ${srcdir}/common/source_files/browser ./
@@ -308,7 +317,7 @@ END
 
   # cd ${srcdir}/settings
   # git checkout ${_settings_commit}
-  cd ${srcdir}/firefox-$_pkgver_real
+  cd ${srcdir}/firefox-$pkgver
   cp -r ${srcdir}/settings/* ${pkgdir}/usr/lib/${pkgname}/
 
   local distini="$pkgdir/usr/lib/$pkgname/distribution/distribution.ini"
@@ -328,9 +337,10 @@ END
     install -Dvm644 browser/branding/${pkgname}/default$i.png \
       "$pkgdir/usr/share/icons/hicolor/${i}x${i}/apps/$pkgname.png"
   done
-  # 192x logo is gone. would need to convert from svg; skip for now
   # install -Dvm644 browser/branding/librewolf/content/about-logo.png \
     # "$pkgdir/usr/share/icons/hicolor/192x192/apps/$pkgname.png"
+  install -Dvm644 ${srcdir}/default192x192.png \
+    "$pkgdir/usr/share/icons/hicolor/192x192/apps/$pkgname.png"
 
   # arch upstream provides a separate svg for this. we don't have that, so let's re-use 16.png
   install -Dvm644 browser/branding/${pkgname}/default16.png \
