[decaf-emu-git] Add catch2

--- a/archlinuxcn/decaf-emu-git/PKGBUILD
+++ b/archlinuxcn/decaf-emu-git/PKGBUILD
@@ -11,7 +11,7 @@ arch=('x86_64')
 url="https://github.com/decaf-emu/decaf-emu"
 license=('GPL')
 depends=('c-ares' 'libuv' 'curl' 'ffmpeg' 'openssl' 'qt5-base' 'qt5-svg' 'sdl2' 'vulkan-icd-loader' 'zlib' 'qt5-x11extras')
-makedepends=('cmake' 'glslang' 'git' 'python' 'vulkan-validation-layers')
+makedepends=('cmake' 'glslang' 'git' 'python' 'vulkan-validation-layers' 'catch2')
 optdepends=('qt5-wayland: for Wayland support')
 source=("git+https://github.com/decaf-emu/decaf-emu")
 md5sums=('SKIP')
