--- a/archlinuxcn/linux-xanmod-edge/PKGBUILD
+++ b/archlinuxcn/linux-xanmod-edge/PKGBUILD
@@ -63,7 +63,7 @@ _major=5.16
 pkgver=${_major}.2
 _branch=5.x
 xanmod=1
-pkgrel=${xanmod}
+pkgrel=2
 pkgdesc='Linux Xanmod - Latest Mainline (EDGE)'
 url="http://www.xanmod.org/"
 arch=(x86_64)
