--- a/archlinuxcn/linux-xanmod/PKGBUILD
+++ b/archlinuxcn/linux-xanmod/PKGBUILD
@@ -63,7 +63,7 @@ _major=5.15
 pkgver=${_major}.16
 _branch=5.x
 xanmod=1
-pkgrel=${xanmod}
+pkgrel=2
 pkgdesc='Linux Xanmod - Current Stable (STABLE)'
 url="http://www.xanmod.org/"
 arch=(x86_64)
