--- a/archlinuxcn/librewolf/lilac.yaml
+++ b/archlinuxcn/librewolf/lilac.yaml
@@ -6,7 +6,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build: aur_pre_build('librewolf',maintainers=['lsf'])
+pre_build_script: aur_pre_build(maintainers=['lsf'])
 
 post_build: aur_post_build
 
