--- a/archlinuxcn/r-nloptr/lilac.yaml
+++ b/archlinuxcn/r-nloptr/lilac.yaml
@@ -1,6 +1,8 @@
 build_prefix: extra-x86_64
 maintainers:
   - github: hubutui
+repo_depends:
+  - r-testthat
 update_on:
   - regex: nloptr_([\d._-]+).tar.gz
     source: regex
