--- a/archlinuxcn/xfel-git/PKGBUILD
+++ b/archlinuxcn/xfel-git/PKGBUILD
@@ -7,8 +7,8 @@ pkgdesc="Tiny FEL tools for allwinner SOC, support RISC-V D1 chip."
 arch=('any')
 url="https://github.com/xboot/xfel"
 license=('MIT')
-provides=(${pkgname})
-conflicts=(${pkgname} ${pkgname%-git})
+provides=(})
+conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
 depends=('libusb')
 makedepends=('git')
