--- a/archlinuxcn/xfel-git/PKGBUILD
+++ b/archlinuxcn/xfel-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="Tiny FEL tools for allwinner SOC, support RISC-V D1 chip."
 arch=('any')
 url="https://github.com/xboot/xfel"
 license=('MIT')
-provides=(})
+provides=()
 conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
 depends=('libusb')
