--- a/archlinuxcn/lxqt-session-git/PKGBUILD
+++ b/archlinuxcn/lxqt-session-git/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="LXQt session"
 arch=("i686" "x86_64")
 url="https://lxqt.org"
 license=("GPL2")
-depends=("liblxqt-git" "xdg-user-dirs" "libx11" "udev" "kwindowsystem" "procps-ng")
+depends=("liblxqt-git" "qtxdg-tools-git" "xdg-user-dirs" "libx11" "udev" "kwindowsystem" "procps-ng")
 optdepends=("sddm: The recommended LXQt display manager")
 makedepends=("git" "cmake" "qt5-tools" "lxqt-build-tools-git")
 provides=("$_pkgname=$pkgver")
