--- a/archlinuxcn/qtxdg-tools-git/lilac.yaml
+++ b/archlinuxcn/qtxdg-tools-git/lilac.yaml
@@ -5,15 +5,14 @@ build_prefix: extra-x86_64
 
 repo_depends:
   - lxqt-build-tools-git
-  - liblxqt-git
-  - qtxdg-tools-git
+  - libqtxdg-git
 
 pre_build_script: |
     vcs_update()
 
 post_build_script: |
     git_pkgbuild_commit()
-    update_aur_repo()
 
 update_on:
-  - source: vcs
+  - source: github
+    github: lxqt/qtxdg-tools
