git-cinnabar: update on python

--- a/archlinuxcn/git-cinnabar/lilac.yaml
+++ b/archlinuxcn/git-cinnabar/lilac.yaml
@@ -5,6 +5,7 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: git-cinnabar
+  - alias: python
 
 maintainers:
   - github: CoelacanthusHex
