--- a/archlinuxcn/goldendict-git/lilac.yaml
+++ b/archlinuxcn/goldendict-git/lilac.yaml
@@ -3,6 +3,7 @@ maintainers:
 
 repo_depends:
   - libeb
+  - libiconv
 
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
@@ -10,3 +11,5 @@ post_build: git_pkgbuild_commit
 update_on:
   - source: github
     github: goldendict/goldendict
+  - source: aur
+    aur: goldendict-git
