vmware-workstation: sync with aur, uefitools-git: changed to uefipatch

--- a/archlinuxcn/uefipatch/lilac.yaml
+++ b/archlinuxcn/uefipatch/lilac.yaml
@@ -3,10 +3,9 @@ maintainers:
 
 build_prefix: extra-x86_64
 
+pre_build_script: aur_pre_build(['jihem'])
 post_build: aur_post_build
 
 update_on:
   - source: aur
-    aur: uefitool-git
-  - source: github
-    github: LongSoft/UEFITool
+    aur: uefipatch
