--- a/archlinuxcn/vmware-workstation/PKGBUILD
+++ b/archlinuxcn/vmware-workstation/PKGBUILD
@@ -18,8 +18,8 @@ pkgbase=vmware-workstation
 pkgname=('vmware-workstation'
         'vmware-workstation-macos'
         'vmware-keymaps')
-pkgver=16.2.1
-_buildver=18811642
+pkgver=16.2.3
+_buildver=19376536
 _pkgver=${pkgver}_${_buildver}
 pkgrel=3
 pkgdesc='The industry standard for running multiple operating systems as virtual machines on a single Linux PC.'
@@ -34,6 +34,7 @@ depends=(
   libaio
   pcsclite
   hicolor-icon-theme
+  libxcrypt-compat # needed for ovftool
   # needed to use Arch GTK3 library (for theme integration)
   gtk3
   gcr
@@ -45,7 +46,7 @@ makedepends=(
   sqlite
 )
 source=(
-  "https://download3.vmware.com/software/wkst/file/VMware-Workstation-Full-${_pkgver/_/-}.${CARCH}.bundle"
+  "https://download3.vmware.com/software/WKST-${pkgver//./}-LX-New/VMware-Workstation-Full-${_pkgver/_/-}.${CARCH}.bundle"
 
   'vmware-bootstrap'
   'vmware-vix-bootstrap'
@@ -65,7 +66,7 @@ source=(
   'vmnet.patch'
 )
 sha256sums=(
-  'd0b80fec76cc75881bae041dc7841a937c53735256f02ed60d3db5e6415a8d52'
+  'f891352a745f6b071a05a9e723212bd533594c5ed85d1618685315ab4fdeadb3'
 
   '12e7b16abf8d7e858532edabb8868919c678063c566a6535855b194aac72d55e'
   'da1698bf4e73ae466c1c7fc93891eba4b9c4581856649635e6532275dbfea141'
@@ -81,8 +82,8 @@ sha256sums=(
 
   '10562d11d50edab9abc2b29c8948714edcb9b084f99b3766d07ddd21259e372e'
   '273d4357599a3e54259c78cc49054fef8ecfd2c2eda35cbcde3a53a62777a5ac'
-  '001844356d381d29d2b40ba53df5c902b487471d64cfb4df39498c5d2189e35b'
-  '5c05b0188543c085e1caf2795b6b151399396f4f437390aca6f6983714d5f48c'
+  '31ed2d3766d3f3bd3b23222f67bcd39ff8edbbe8ff13fbe7b1fa565c8ed61144'
+  'c8ec6c997964f4763d9ddec138c8f6a763aa2bba6dcb8d5fc52e6babd4af4ced'
 )
 options=(!strip emptydirs)
 
@@ -92,25 +93,25 @@ _isovirtualprinterimages=(Linux Windows)
 
 if [ -n "$_enable_macOS_guests" ]; then
 
-_vmware_fusion_ver=12.2.1_18811640
+_vmware_fusion_ver=12.2.3
+_vmware_fusion_buildver=19436697
+_vmware_fusion_ver_full=${_vmware_fusion_ver}_${_vmware_fusion_buildver}
 # List of VMware Fusion versions: https://softwareupdate.vmware.com/cds/vmw-desktop/fusion/
-
-_unlocker_ver=3.0.7
 
 makedepends+=(
   python
   dmg2img
   p7zip
-  uefitool
+  uefipatch
 )
 
 source+=(
-  "https://download3.vmware.com/software/fusion/file/VMware-Fusion-${_vmware_fusion_ver/_/-}_x86.dmg"
-  "unlocker-${_unlocker_ver}.py::https://raw.githubusercontent.com/DrDonk/unlocker/v${_unlocker_ver}/unlocker.py"
-  "efi-patches-${_unlocker_ver}.txt::https://raw.githubusercontent.com/DrDonk/unlocker/v${_unlocker_ver}/uefipatch/efi-patches.txt"
+  "https://download3.vmware.com/software/FUS-${_vmware_fusion_ver//./}-New/VMware-Fusion-${_vmware_fusion_ver_full/_/-}_x86.dmg"
+  "unlocker.py"
+  "efi-patches.txt"
 )
 sha256sums+=(
-  'bb87e0a7db38beaf29ec9fd1191a092fd0bcc9f24c4bdc3ceebf65ff52289a52'
+  '8cd01bd0e7d18b32bfa159bcce54bd885151e3d92d97e5d4a20bcbc09a1c3f4b'
   '8a61e03d0edbbf60c1c84a43aa87a6e950f82d2c71b968888f019345c2f684f3'
   '392c1effcdec516000e9f8ffc97f2586524d8953d3e7d6f2c5f93f2acd809d91'
 )
@@ -137,7 +138,7 @@ _create_database_file() {
 if [ -n "$_enable_macOS_guests" ]; then
   for isoimage in ${_fusion_isoimages[@]}
   do
-	sqlite3 "$database_filename" "INSERT INTO components(name,version,buildNumber,component_core_id,longName,description,type) VALUES(\"vmware-tools-$isoimage\",\"1\",\"${_vmware_fusion_ver#*_}\",1,\"$isoimage\",\"$isoimage\",1);"
+	sqlite3 "$database_filename" "INSERT INTO components(name,version,buildNumber,component_core_id,longName,description,type) VALUES(\"vmware-tools-$isoimage\",\"1\",\"${_vmware_fusion_ver_full#*_}\",1,\"$isoimage\",\"$isoimage\",1);"
   done
 fi
 }
@@ -151,10 +152,10 @@ prepare() {
     --extract "$extracted_dir"
 
 if [ -n "$_enable_macOS_guests" ]; then
-  dmg2img -s VMware-Fusion-${_vmware_fusion_ver/_/-}_x86.dmg VMware-Fusion-${_vmware_fusion_ver/_/-}_x86.iso
-  7z e -y VMware-Fusion-${_vmware_fusion_ver/_/-}_x86.iso VMware\ Fusion/VMware\ Fusion.app/Contents/Library/isoimages/\* -o"fusion-isoimages" > /dev/null 2>&1 || true
+  dmg2img -s VMware-Fusion-${_vmware_fusion_ver_full/_/-}_x86.dmg VMware-Fusion-${_vmware_fusion_ver_full/_/-}_x86.iso
+  7z e -y VMware-Fusion-${_vmware_fusion_ver_full/_/-}_x86.iso VMware\ Fusion/VMware\ Fusion.app/Contents/Library/isoimages/\* -o"fusion-isoimages" > /dev/null 2>&1 || true
 
-  sed -i -e "s|/usr/lib/vmware/|${pkgdir/%vmware-workstation/vmware-workstation-macos}/usr/lib/vmware/|" "$srcdir/unlocker-${_unlocker_ver}.py"
+  sed -i -e "s|/usr/lib/vmware/|${pkgdir/%vmware-workstation/vmware-workstation-macos}/usr/lib/vmware/|" "$srcdir/unlocker.py"
 fi
 }
 
@@ -381,7 +382,7 @@ fi
 
 if [ -n "$_enable_macOS_guests" ]; then
   msg "Patching VMware to enable macOS guest support"
-  python3 "$srcdir/unlocker-${_unlocker_ver}.py" > /dev/null
+  python3 "$srcdir/unlocker.py" > /dev/null
 
   for isoimage in ${_fusion_isoimages[@]}
   do
@@ -392,7 +393,7 @@ if [ -n "$_enable_macOS_guests" ]; then
   _efi_arch=(32 64)
   for arch in ${_efi_arch[@]}
   do
-    uefipatch "$pkgdir/usr/lib/vmware/roms/EFI${arch}.ROM" "$srcdir/efi-patches-${_unlocker_ver}.txt" -o "$pkgdir/usr/lib/vmware/roms/EFI${arch}.ROM" > /dev/null
+    uefipatch "$pkgdir/usr/lib/vmware/roms/EFI${arch}.ROM" "$srcdir/efi-patches.txt" -o "$pkgdir/usr/lib/vmware/roms/EFI${arch}.ROM" > /dev/null
   done
 fi
 
